--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,15 @@ plugins {
 }
 
 group = 'math_puzzles'
-sourceCompatibility = '1.8'
+sourceCompatibility = '1.11'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 }
 
 test {
